update program fr

--- a/fr/programme.html
+++ b/fr/programme.html
@@ -95,7 +95,7 @@
                     
 <table class="table table-striped table-borderless mt-4">
 <thead>
-  <tr>
+  <tr style="color:white">
     <th scope="col">Day</th>
     <th scope="col">Wednesday 27 May</th>
     <th scope="col">Thursday 28 May</th>
@@ -105,39 +105,119 @@
 <tbody>
   <tr>
     <th scope="row">10h30</th>
-    <td>PRESENTATION   <br>G'MIC x Python x Blender: exposing 500 parametric image filters for data-scientists and artists <br><strong>Jonathan-David Schröder</strong> 
+    <td>
+     <h5>PRESENTATION</h5>    
+     <h3 class="mt-4 mb-4"> G'MIC x Python x Blender: exposing 500 parametric image filters for data-scientists and artists </h3>
+     <h3>Jonathan-David Schröder</h3>
+      <p>G'MIC is a full-featured open-source software framework for digital image processing. Its C++ library has been developed within the french CNRS research-center for more than 10 years. We will be showcasing a work in progress on plugging as many as its parametric graphics 500 filters through a new official C/Python binding for data-scientists
+      </p>
     </td>
-    <td>PRESENTATION   <br>Processing.py -- Python Mode for Processing  <br><strong>Tristan Bunn</strong> </td>
+    
+    <td>  
+      <h5>PRESENTATION</h5>    
+      <h3> Processing.py -- Python Mode for Processing</h3>
+      <h3>Tristan Bunn</h3>
+       <p>Processing Python Mode (or Processing.py) provides designers
+       </p>
+      </td>
     <td></td>
   
   </tr>
 
   <tr>
     <th scope="row">11h30</th>
-    <td>PRESENTATION   <br>Designing for/with CryptPad <br><strong>David Benqué</strong> </td>
-    <td>PRESENTATION   <br>Immersive Web of Twins  <br><strong>Philippe Coval</strong> </td>
-    <td>PRESENTATION   <br>Inkscape <br><strong>Marc Jeanmougin</strong> </td>
+    <td>
+        <h5>PRESENTATION</h5>    
+        <h3 class="mt-4 mb-4"> Designing for/with CryptPad</h3>
+        <h3>David Benqué</h3>
+         <p>CryptPad is a collaborative office suite that is open source and encrypted. We aim to offer similar tools and features as the big platforms, but with privacy as a guiding principle. I will talk about the way we "get things done" as a core team of three. CryptPad is both the product we are developing and our daily work environment. As the designer on the team, operating from within the apps I am designing has led me to devise new strategies and workflows. I will reflect on these using a couple of recently added features as tangible examples. These include the option to "burn after reading", access rights management, and deleting a document's history. These features also illustrate some of the concepts and trade-offs that are unique to CryptPad and that we try to communicate through the interface. Finally, I will reflect on how UI/UX design work "gets done" not only *for* open source software, but *with* it. The FLOSS tools for this kind of work are still few and far between, but there are exciting things on the horizon.
+
+         </p>
+    <td> 
+      <h5>PRESENTATION</h5>  
+      <h3 class="mt-4 mb-4">Immersive Web of Twins</h3>
+      <h3>Philippe Coval</h3>
+      <p>Thanks to WebGL, WebVR, WebXR API, effortless navigation into 3D scenes using just a Web Browser is now a reality. A new era of possibilities is now available for developers using higher level frameworks such as Three.js, A-Frame or Baybylon.Js to deal with 3D contents for Virtual Reality or Augmented Reality. What about Augmented Virtuality ? The "Web of Twins" experiment is exploring interactions from sensors and actuators to virtual worlds back and forth. Each step of the full opensource chain will be detailed https://purl.org/rzr/weboftwins
+        </p>
+      </td>
+    <td>
+        <h5>PRESENTATION</h5>  
+        <h3>Inkscape </h3>
+        <h3>Marc Jeanmougin</h3>
+       <p>All about our favorite program...</p> 
+      </td>
   </tr>
 
   <tr>
     <th scope="row">12h30</th>
-    <td>PRESENTATION   <br>Integrating others in your design workflow: Using LibreOffice offline <br><strong>Pedro Silva</strong></td>
-    <td>PRESENTATION   <br>Praxeology – Teaching Design Foundations with FLOSS (and Getting Away With It) <br><strong>Brendan Howell</strong></td>
-    <td>PRESENTATION   <br>Icons at GNOME: A Brave New World<br><strong>Tobias Bernard</strong></td>
+    <td>
+        <h5>PRESENTATION</h5>  
+        <h3 class="mt-4 mb-4">Integrating others in your design workflow: Using Collabora Online </h3>
+        <h3>Pedro Silva</h3>
+        <p>Design workflows and sharing them with other team members to ensure the workflow is designed correctly has never been so important as today. Tag along and see how I use LO and Collabora Online<sup>1</sup> to share and collaborate with my team mates. Learn also how you can customize to your own needs and more important to your team’s workflow. There is no requirement to be eligible to attend</p>
+        <p>Collabora Online - The driving force behind putting LibreOffice in the cloud - Collabora Online is a powerful LibreOffice-based online office that supports all major document formats, which you can integrate in your own infrastructure.  Collabora is also one of the main LO contributors and it has been already for while :)</p>
+      </td>
+    <td>
+        <h5>PRESENTATION</h5>  
+        <h3 class="mt-4 mb-4">Praxeology – Teaching Design Foundations with FLOSS (and Getting Away With It)</h3>
+        <h3> Brendan Howell</h3> 
+        <p>In 2015 I was offered a job teaching a first-year foundations course in digital design. Bemused.
+          </p>
+        </td>
+    <td>
+        <h5>PRESENTATION</h5> 
+        <h3 class="mt-4 mb-4">Icons at GNOME: A Brave New World</h3>
+        <h3>Tobias Bernard</h3>
+      <p>Over the past few years the way we do icons at GNOME has changed significantly: We have an overhauled style for app icons
+        </p>
+      </td>
   </tr>
 
   <tr>
     <th scope="row">15h00</th>
-    <td>WORKSHOP <br> From 2D to 3D using Deep Learning <br><strong>Peter Naftaliev</strong></td>
-    <td>WORKSHOP <br> Paint with code - introduction to creative coding with processing <br><strong>Eylul Dogruel</strong></td>
-    <td>WORKSHOP <br>Here be dragons: speedpainting with Krita<br><strong>David Revoy</strong></td>
+    <td>
+      <h5>WORKSHOP</h5> 
+      <h3 class="mt-4 mb-4">From 2D to 3D using Deep Learning</h3>
+      <h3>Peter Naftaliev</h3>
+    <p>Technological advances in artificial intelligence allow to take photos of real life objects and automatically create 3D models out of them. This is going to change the way a 3D designer works</p>
+  </td>
+
+    <td>
+      <h5>WORKSHOP</h5>
+      <h3 class="mt-4 mb-4">Paint with code - introduction to creative coding with processing</h3>
+      <h3>Eylul Dogruel</h3>
+    <p>Processing is a java based programming language that is designed specifically for creatives
+      </p>
+    </td>
+
+    <td>
+      <h5>WORKSHOP</h5>
+      <h3 class="mt-4 mb-4">Here be dragons: speedpainting with Krita</h3> 
+      <h3>David Revoy</h3>
+      <p>This workshop reveals a set of techniques and key steps to make a fantasy concept-art speedpainting of a fantasy creature using Krita and a tablet. The workshop will guide the participants (from beginners to advanced) to enjoy tweaking ideas visually with the large tool set proposed by Krita and explore an inner world of unexplored designs... Here be dragons!
+        </p>
+    </td>
   </tr>
 
   <tr>
     <th scope="row">17h00</th>
     <td>  </td>
-    <td>LIGHTNING TALK<br> Showcase : the visual identity of the Libre Software Meeting 18 <br><strong>Marjorie Ober</strong></td>
-    <td>WORKSHOP <br>Live and innovative ASCII Art with Terminedia<br><strong>Joāo Bueno</strong></td>
+
+    <td>
+      <h5>LIGHTNING TALK</h5>
+      <h3 class="mt-4 mb-4">Showcase : the visual identity of the Libre Software Meeting 18</h3>
+      <h3>Marjorie Ober</h3>
+    <p>Presentation of LSM communication entirely realized with free tools, in collaboration with N. Chesnais. Talk based on Libre collaborative work, methods and tools. In the frame of the request "work made using Libre Graphics tools".
+      </p>
+    </td>
+
+    <td>
+      <h5>WORKSHOP </h5>
+      <h3 class="mt-4 mb-4">Live and innovative ASCII Art with Terminedia</h3>
+      <h3>Joāo Bueno</h3>
+    <p>Terminedia is a project meant an easy to use tool to create innovative art with ASCII and Unicode characters meant for programmers and artists alike. Having a character cell as "Picture element" in a terminal, one as not only a color, as image pixels do, but the character itself (its shape), a background color, and text effects such as bold, underline and blinking. Terminedia is a Python library that allows "drawing with characters", selecting various attributes as size, color, direction and effects. This allows for the creation of static and interactive graphic art, business applications and even videogames (with complexity equivalent to games from the 8 bit era). Its drawing API, capable of doing ellipses, rectangles, bezier curves, blitting other images, using colors and gradients, can work with either 1/4 block characters - (▄ ▛ ▌ ▜ ▝ ▚ ▖ ▞ ▀ █ ▘▗ ▙ ▐ ▟), in the same way traditional images works - so that a 80x25 text terminal can display a 160x50 colored image, or just use plain characters. As an example, issuing the call "screen.draw.ellipse((0, 0, 40, 15), color=(255,255,0), effects = Effects.blink, char='@') " will draw an ellipse using "@"
+      </p>
+    </td>
   </tr>
 
   
