--- a/en/program.html
+++ b/en/program.html
@@ -150,12 +150,12 @@
 
   <tr>
     <th scope="row">12h30</th>
-   <td>
+    <td>
         <h5>PRESENTATION</h5>  
         <h3 class="mt-4 mb-4">Integrating others in your design workflow: Using Collabora Online </h3>
         <h3>Pedro Silva</h3>
         <p>Design workflows and sharing them with other team members to ensure the workflow is designed correctly has never been so important as today. Tag along and see how I use LibreOffice and Collabora Online<sup>1</sup> to share and collaborate with my team mates. Learn also how you can customize to your own needs and more important to your team’s workflow. There is no requirement to be eligible to attend</p>
-        <p>Collabora Online - The driving force behind putting LibreOffice in the cloud - Collabora Online is a powerful LibreOffice-based online office that supports all major document formats, which you can integrate in your own infrastructure.  Collabora is also one of the main LO contributors and it has been already for while :)</p>
+        <p>Collabora Online - The driving force behind putting LibreOffice in the cloud - Collabora Online is a powerful LibreOffice-based online office that supports all major document formats, which you can integrate in your own infrastructure.  Collabora is also one of the main LibreOffice contributors and it has been already for while :)</p>
       </td>
     <td>
         <h5>PRESENTATION</h5>  
