--- a/en/program.html
+++ b/en/program.html
@@ -110,12 +110,12 @@
      <h3 class="mt-4 mb-4"> G'MIC x Python x Blender: exposing 500 parametric image filters for data-scientists and artists </h3>
      <h3>Jonathan-David Schröder</h3>
       <p>G'MIC is a full-featured open-source software framework for digital image processing. Its C++ library has been developed within the french CNRS research-center for more than 10 years. We will be showcasing a work in progress on plugging as many as its parametric graphics 500 filters through a new official C/Python binding for data-scientists
-      </p>
+        </p>
     </td>
     
     <td>  
       <h5>PRESENTATION</h5>    
-      <h3> Processing.py -- Python Mode for Processing</h3>
+      <h3 class="mt-4 mb-4"> Processing.py -- Python Mode for Processing</h3>
       <h3>Tristan Bunn</h3>
        <p>Processing Python Mode (or Processing.py) provides designers
        </p>
@@ -142,7 +142,7 @@
       </td>
     <td>
         <h5>PRESENTATION</h5>  
-        <h3>Inkscape </h3>
+        <h3 class="mt-4 mb-4">Inkscape </h3>
         <h3>Marc Jeanmougin</h3>
        <p>All about our favorite program...</p> 
       </td>
