add full descriptions

--- a/fr/programme.html
+++ b/fr/programme.html
@@ -109,15 +109,15 @@
      <h5>PRESENTATION</h5>    
      <h3 class="mt-4 mb-4"> G'MIC x Python x Blender: exposing 500 parametric image filters for data-scientists and artists </h3>
      <h3>Jonathan-David Schröder</h3>
-      <p>G'MIC is a full-featured open-source software framework for digital image processing. Its C++ library has been developed within the french CNRS research-center for more than 10 years. We will be showcasing a work in progress on plugging as many as its parametric graphics 500 filters through a new official C/Python binding for data-scientists
-      </p>
+      <p>G'MIC is a full-featured open-source software framework for digital image processing. Its C++ library has been developed within the french CNRS research-center for more than 10 years. We will be showcasing a work in progress on plugging as many as its parametric graphics 500 filters through a new official C/Python binding for data-scientists, artists and amateurs, as well as a new Blender3d/Python/Nodes add-on using the binding.
+        </p>
     </td>
     
     <td>  
       <h5>PRESENTATION</h5>    
-      <h3> Processing.py -- Python Mode for Processing</h3>
+      <h3 class="mt-4 mb-4"> Processing.py -- Python Mode for Processing</h3>
       <h3>Tristan Bunn</h3>
-       <p>Processing Python Mode (or Processing.py) provides designers
+       <p>Processing Python Mode (or Processing.py) provides designers, artists, and any aspiring coders, with an accessible and visual way to learn Python programming. This presentation introduces the creative coding scene, reviews some inspiring projects, and examines a programming fundamentals course based on Processing.py. The 20-minute talk will cover three main areas: 1. A very brief intro to creative coding -- * some history around the demoscene and Flash * inspiring works created with Processing and Python * the itch that Processing.py scratches. 2. Processing -- * a swift history * Processing alternatives * some Processing.py examples. * Processing.py vs standard Processing gotchas (and solutions). 3. A Processing.py programming course -- * a review of a course that I've run and refined for three years, the outline and student profile * results and student work. I'm also happy to run a workshop on this topic.
        </p>
       </td>
     <td></td>
@@ -142,33 +142,33 @@
       </td>
     <td>
         <h5>PRESENTATION</h5>  
-        <h3>Inkscape </h3>
+        <h3 class="mt-4 mb-4">Inkscape </h3>
         <h3>Marc Jeanmougin</h3>
-       <p>All about our favorite program...</p> 
+       <p>All about our favorite software...</p> 
       </td>
   </tr>
 
   <tr>
     <th scope="row">12h30</th>
-  <td>
+    <td>
         <h5>PRESENTATION</h5>  
         <h3 class="mt-4 mb-4">Integrating others in your design workflow: Using Collabora Online </h3>
         <h3>Pedro Silva</h3>
         <p>Design workflows and sharing them with other team members to ensure the workflow is designed correctly has never been so important as today. Tag along and see how I use LibreOffice and Collabora Online<sup>1</sup> to share and collaborate with my team mates. Learn also how you can customize to your own needs and more important to your team’s workflow. There is no requirement to be eligible to attend</p>
-        <p>Collabora Online - The driving force behind putting LibreOffice in the cloud - Collabora Online is a powerful LibreOffice-based online office that supports all major document formats, which you can integrate in your own infrastructure.  Collabora is also one of the main LO contributors and it has been already for while :)</p>
+        <p>Collabora Online - The driving force behind putting LibreOffice in the cloud - Collabora Online is a powerful LibreOffice-based online office that supports all major document formats, which you can integrate in your own infrastructure.  Collabora is also one of the main LibreOffice contributors and it has been already for while :)</p>
       </td>
     <td>
         <h5>PRESENTATION</h5>  
         <h3 class="mt-4 mb-4">Praxeology – Teaching Design Foundations with FLOSS (and Getting Away With It)</h3>
         <h3> Brendan Howell</h3> 
-        <p>In 2015 I was offered a job teaching a first-year foundations course in digital design. Bemused.
+        <p>In 2015 I was offered a job teaching a first-year foundations course in digital design. Bemused, I informed my future colleagues that I was 1. an artist/engineer and not a proper designer and 2. that I would teach the course strictly using FLOSS tools. Much to my surprise, I got the position and they happily accepted my conditions. Even more surprisingly, I am still working there 5 years later. In this presentation, I will outline the curriculum that I have developed for teaching digital design foundations. This course is specially conceived for, and indeed only possible, using FLOSS tools and approaches. I will of course provide some examples of successful workshops, assignments, projects (and a few interesting (or at least, comic) failures). Finally, I will try to sketch out some areas and forms of practice where FLOSS tools, instead of catching up, are starting to lead the way to new forms of education, knowledge and image making.
           </p>
         </td>
     <td>
         <h5>PRESENTATION</h5> 
         <h3 class="mt-4 mb-4">Icons at GNOME: A Brave New World</h3>
         <h3>Tobias Bernard</h3>
-      <p>Over the past few years the way we do icons at GNOME has changed significantly: We have an overhauled style for app icons
+      <p>Over the past few years the way we do icons at GNOME has changed significantly: We have an overhauled style for app icons, a new approach to symbolic icons in apps, and a number of neat new little helper apps, all in the service of one goal: Making icons dramatically easier to deal with for third party app developers and designers. To enable these easier workflows we've come up with a number of unorthodox solutions that challenge some of the classic best practices of icon design, such as multiple icon sizes, pixel hinting, and the icon name specification. We'll talk about how this initiative came to be, where we are right now (with some live demos), and what's in store for the future.
         </p>
       </td>
   </tr>
@@ -179,14 +179,14 @@
       <h5>WORKSHOP</h5> 
       <h3 class="mt-4 mb-4">From 2D to 3D using Deep Learning</h3>
       <h3>Peter Naftaliev</h3>
-    <p>Technological advances in artificial intelligence allow to take photos of real life objects and automatically create 3D models out of them. This is going to change the way a 3D designer works</p>
+    <p>Technological advances in artificial intelligence allow to take photos of real life objects and automatically create 3D models out of them. This is going to change the way a 3D designer works, allowing for much more efficiency and time saving. In this talk I will present a new neural network which takes as input a 2D image and automatically creates a 3D model, using an encoding-decoding architecture using Tensorflow. A ResNet based encoder is trained to encode the image into a z-vector with inherent 3D features and a decoder which is actually a boolean classifier is trained to create a 3D model from the z-vector. The reconstruction can happen in any voxel resolution, without retraining the network. We will also see how this same architecture combined with a generative adversarial network (GAN) can be used to generate new 3D models. We will discuss some of the challenges with 3D modelling and ML, we will present cool implementations of ML in the visualization, texture analysis, 3D modeling and other relevant subjects.</p>
   </td>
 
     <td>
       <h5>WORKSHOP</h5>
       <h3 class="mt-4 mb-4">Paint with code - introduction to creative coding with processing</h3>
       <h3>Eylul Dogruel</h3>
-    <p>Processing is a java based programming language that is designed specifically for creatives
+    <p>Processing is a java based programming language that is designed specifically for creatives, and is used commonly by artists, designers and makers. The workshop will start with a brief introduction to programming with processing, overviewing structures of the programming and the Processing language. We will then use the code as a painting and animation medium, and explore how the artist can both use code to generate the art or to collaborate with it. During the second half of the workshop participants will pursue their individual art projects based on their interests. The workshop is focused on creative process and as such open both to participants with or without prior experience in programming.
       </p>
     </td>
 
