add fantom on program.html

--- a/en/program.html
+++ b/en/program.html
@@ -212,7 +212,7 @@
     <td>
       <h5>LIGHTNING TALK</h5>
       <h3 class="mt-4 mb-4">Showcase : the visual identity of the Libre Software Meeting 18</h3>
-      <h3>Marjorie Ober</h3>
+      <h3>Marjorie Ober & Nicolas Chesnais</h3>
     <p>Presentation of LSM communication entirely realized with free tools, in collaboration with N. Chesnais. Talk based on Libre collaborative work, methods and tools. In the frame of the request "work made using Libre Graphics tools".
       </p>
     </td>
