--- a/fr/programme.html
+++ b/fr/programme.html
@@ -89,7 +89,8 @@
               <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2 class="text-center">Program</h2>
+                        <h2 class="text-center">Program <small>(Paris time zone)</small></h2>
+
                      
                     <!-- tableau -->
                     
@@ -201,12 +202,18 @@
 
   <tr>
     <th scope="row">17h00</th>
-    <td>  </td>
+    <td>
+       <h5>WORKSHOP</h5>
+       <h3 class="mt-4 mb-4">Retouching basics with GIMP</h3> 
+       <h3>Aryeom and Jehan</h3>
+      <p>We will show some basic techniques for retouching images with GIMP, with some emphasis on image restoration. This is a very short introduction to GIMP, based on courses given in University, which may not focus on tools only, but also on the workflow and the implications of retouching images. Questions will of course be welcome.</p>
+      <p>Prerequisites: please have the last version of GIMP ready if you wish to try together (otherwise you can just watch). A graphics tablet is also recommended though not mandatory. </p>
+    </td>
 
     <td>
       <h5>LIGHTNING TALK</h5>
       <h3 class="mt-4 mb-4">Showcase : the visual identity of the Libre Software Meeting 18</h3>
-      <h3>Marjorie Ober</h3>
+      <h3>Marjorie Ober & Nicolas Chesnais</h3>
     <p>Presentation of LSM communication entirely realized with free tools, in collaboration with N. Chesnais. Talk based on Libre collaborative work, methods and tools. In the frame of the request "work made using Libre Graphics tools".
       </p>
     </td>
