--- a/en/program.html
+++ b/en/program.html
@@ -115,10 +115,9 @@
     
     <td>  
       <h5>PRESENTATION</h5>    
-      <h3 class="mt-4 mb-4"> Processing.py -- Python Mode for Processing</h3>
+      <h3 class="mt-4 mb-4"> Processing Python for Mode for Creative Coding and Teaching</h3>
       <h3>Tristan Bunn</h3>
-       <p>Processing Python Mode (or Processing.py) provides designers, artists, and any aspiring coders, with an accessible and visual way to learn Python programming. This presentation introduces the creative coding scene, reviews some inspiring projects, and examines a programming fundamentals course based on Processing.py. The 20-minute talk will cover three main areas: 1. A very brief intro to creative coding -- * some history around the demoscene and Flash * inspiring works created with Processing and Python * the itch that Processing.py scratches. 2. Processing -- * a swift history * Processing alternatives * some Processing.py examples. * Processing.py vs standard Processing gotchas (and solutions). 3. A Processing.py programming course -- * a review of a course that I've run and refined for three years, the outline and student profile * results and student work. I'm also happy to run a workshop on this topic.
-       </p>
+       <p>Processing Python Mode (or Processing.py) provides designers, artists, and any aspiring coders, with an accessible and visual way to learn Python programming. This presentation introduces the software, the creative coding scene, some inspiring projects, and a programming fundamentals course based on Processing.py. Additionally, I'll be sharing learning materials and a repository of code samples.</p>
       </td>
     <td></td>
   
