update index en

--- a/en/index.html
+++ b/en/index.html
@@ -31,26 +31,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="program.html">Program</a>
-            </li> <!-- 
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="/en/program.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Program</a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <ul class="list-inline">  
-                    <li class="list-inline-item"><a class="" href="#">Day 1</a></li>
-                    <li class="list-inline-item"><a class="" href="#">Day 2</a></li>
-                    <li class="list-inline-item"><a class="" href="#">Day 3</a></li>
-                 </ul>
-              </ul>
-            </li>-->
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Venue</a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="venue.html">Information</a>
-                    <a class="dropdown-item" href="venue.html#registration">Registration</a>
-                    <a class="dropdown-item" href="venue.html#accomodation">Accomodation</a>
-                    <a class="dropdown-item" href="venue.html#travel">Travel</a>
-             </div>
-              </li>
+            </li>             
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Older</a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -124,11 +105,12 @@
                     <div class="col-12">
                         <div id="information" class="text-center importantinfo">
                         <h2 class="text-center h2">Important information</h2>
-                        <p class="text-center importantinfo">
-                              Due to the pandemy and ongoing travel restrictions, we finally decided to postpone the Libre Graphics Meeting in Rennes to 2021.<br/><br/>
-                              For this year we are organizing an online event instead. Presentations and workshops will be streamed online, on May 27th to 29th.<br/>
-                              The program will be announced soon, please stay tuned.<br/><br/>
-                        </p>
+                        <div class="text-center importantinfo p-4">
+                            <p>
+                            Due to the pandemy and ongoing travel restrictions, we finally decided to postpone the Libre Graphics Meeting in Rennes to 2021.</p>
+                            <p>For this year we are organizing an online event instead. Presentations and workshops will be streamed online, on May 27th to 29th.</p>
+                            <p>Please check the <a href="program.html" >program</a> and <a href="/live.html">how to join the event</a>.</p>
+                        </div>
                         </div>
                         <br/>
                         <h2 class="text-center">Participate !</h2>
@@ -156,69 +138,7 @@
             </div><!-- /container-->
           </section>
 
-          <section class="cor1">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12">
-                        <h2 class="text-center">Venue</h2>
-                        <div class="row">
-                            <div class="col-sm-6">
-                          <p class="text-center"><img src="../css/img/Livio-Fania-image01.png" alt="" class="img-fluid"></p></div>
-                          <div class="col-sm-6">
-                          <p class="text-center"><img src="../css/img/Livio-Fania-image02.png" alt="" class="img-fluid"></p>
-                        </div>
-                          <p class="mt-4"> LGM 2020 will take place in several venues with large, medium, and small spaces. We welcome lectures, workshops and other interactive formats.</p>
-                        </div>
-                    </div><!-- /col12-->
-
-                   
-
-                    <div class="col-md-4">
-                        <div class="box1 mb-4">
-                            <h3 class="mt-2">ISTIC, University Rennes 1</h3>
-                            <p class="text-white mt-4">
-                                <span class="bubble">26<sup>th</sup> May</span>
-                                <span class="bubble">27<sup>th</sup> May</span>
-                            </p>
-                            <h4>Address</h4>
-                            <p>263, avenue du Général Leclerc<br>
-                            Rennes</p>
-                        </div>
-                    </div><!-- /col4-->
-
-                    <div class="col-md-4">
-                        <div class="box1 mb-4">
-                            <h3 class="mt-2">Jardin Moderne</h3>
-                            <p class="text-white mt-4">
-                                <span class="bubble">28<sup>th</sup> May</span>
-                                <span class="bubble">29<sup>th</sup> May</span>
-                            </p>
-                            <h4>Address</h4>
-                            <p>11, rue du Manoir de Servigné<br>
-                              Rennes</p>
-                        </div>
-                    </div><!-- /col4-->
-
-                    <div class="col-md-4">
-                        <div class="box1 mb-4">
-                            <h3 class="mt-2">Activdesign</h3>
-                            <p class="text-white mt-4">
-                                <span class="bubble">28<sup>th</sup> May</span>
-                                <span class="bubble">29<sup>th</sup> May</span>
-                            </p>
-                            <h4>Address</h4>
-                            <p>11, bis rue Jean le Hô<br>
-                              Rennes</p>
-                        </div>
-                    </div><!-- /col4-->
-
-                    <div class="col-12">
-                        <p class="text-center mt-4"><a href="venue.html" class="btn btn-cor5">Learn more</a></p>
-                    </div>
-
-                </div><!-- /row -->
-            </div><!-- /container-->
-          </section>
+   
 
           <section class="cor4">
             <div class="container">
