--- a/en/index.html
+++ b/en/index.html
@@ -109,7 +109,7 @@
                             <p>
                             Due to the pandemy and ongoing travel restrictions, we finally decided to postpone the Libre Graphics Meeting in Rennes to 2021.</p>
                             <p>For this year we are organizing an online event instead. Presentations and workshops will be streamed online, on May 27th to 29th.</p>
-                            <p>Please check the <a href="program.html" >program</a> and <a href="/live.html">how to join the event</a>.</p>
+                            <p>Please check the <a href="program.html" class="btn btn-cor2 btn-lg">>program</a> and <a href="/live.html" class="btn btn-cor2 btn-lg">how to join the event</a>.</p>
                         </div>
                         </div>
                         <br/>
@@ -127,7 +127,7 @@
                     </div><!-- /col4-->
                     <div class="col-md-4">
                         <p class="text-center"><img src="../css/img/icone03.png" width="130" alt=""></p>
-                        <p class="h3 text-center">Join our party</p>
+                        <p class="h3 text-center"><strike>Join our party</strike></p>
                     </div><!-- /col4-->
 
                     <div class="col-12">
