update index en

--- a/en/index.html
+++ b/en/index.html
@@ -109,7 +109,7 @@
                             <p>
                             Due to the pandemy and ongoing travel restrictions, we finally decided to postpone the Libre Graphics Meeting in Rennes to 2021.</p>
                             <p>For this year we are organizing an online event instead. Presentations and workshops will be streamed online, on May 27th to 29th.</p>
-                            <p>Please check the <a href="program.html" class="btn btn-cor2 btn-lg">>program</a> and <a href="/live.html" class="btn btn-cor2 btn-lg">how to join the event</a>.</p>
+                            <p>Please check the <a href="program.html" class="btn btn-cor2 btn-lg"> program</a> and read <a href="/live.html" class="btn btn-cor2 btn-lg">how to join the event</a>.</p>
                         </div>
                         </div>
                         <br/>
