update index en

--- a/en/index.html
+++ b/en/index.html
@@ -105,7 +105,7 @@
                     <div class="col-12">
                         <div id="information" class="text-center importantinfo">
                         <h2 class="text-center h2">Important information</h2>
-                        <div class="text-center importantinfo p-4">
+                        <div class="text-center importantinfo p-4 mt-2">
                             <p>
                             Due to the pandemy and ongoing travel restrictions, we finally decided to postpone the Libre Graphics Meeting in Rennes to 2021.</p>
                             <p>For this year we are organizing an online event instead. Presentations and workshops will be streamed online, on May 27th to 29th.</p>
