--- a/en/index.html
+++ b/en/index.html
@@ -103,9 +103,9 @@
               <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <div id="information" class="text-center importantinfo">
+                        <div id="information" class="text-center pt-2 importantinfo">
                         <h2 class="text-center h2">Important information</h2>
-                        <div class="text-center importantinfo p-4 mt-2">
+                        <div class="text-center importantinfo p-4">
                             <p>
                             Due to the pandemy and ongoing travel restrictions, we finally decided to postpone the Libre Graphics Meeting in Rennes to 2021.</p>
                             <p>For this year we are organizing an online event instead. Presentations and workshops will be streamed online, on May 27th to 29th.</p>
