--- a/en/live.html
+++ b/en/live.html
@@ -76,13 +76,13 @@
 
       <main>
 
-          <section class="cor2">
+          <section class="cor1">
               <div class="container">
                 <div class="row">
                     <div class="col-md-12">
                         <h2 class="text-center">Live</h2>
-                         <p>Please join the IRC channel #lgm-online on the Freenode server to interact with other participants. You can use your favorite IRC client, or the web client <a href="https://kiwiirc.com/client/irc.freenode.net">KiwiIRC</a> (enter your Nick, the Channel #lgm-online and press the Start button).</p>
-                         <p>For workshops, please join the IRC channel #lgm-workshop if you want to participate.</p>
+                         <p class="mt-4">Please join the IRC channel #lgm-online on the Freenode server to interact with other participants. You can use your favorite IRC client, or the web client <a href="https://kiwiirc.com/client/irc.freenode.net" class="btn btn-cor2 btn-sm">KiwiIRC</a> (enter your Nick, the Channel #lgm-online and press the Start button).</p>
+                         <p class="mt-4">For workshops, please join the IRC channel #lgm-workshop if you want to participate.</p>
                     </div><!-- /row-->
                                             <!-- video player-->
                     <video width="640" height="360" controls style="margin: auto">
@@ -90,9 +90,8 @@
                         Your browser does not support the video tag.
                     </video>
                     <div class="col-md-12">
-                         </br>
-                         <p>You can watch the video stream here, or in a video player application like VLC (Open Network Stream with the URL http://ice.wintermute.org:8000/lgm.webm).</p>
-                         <p>Reload the page or restart your player at the beginning of each presentation or workshop to access the new stream.</p>
+                         <p class="mt-4">You can watch the video stream here, or in a video player application like VLC (Open Network Stream with the URL http://ice.wintermute.org:8000/lgm.webm).</p>
+                         <p class="mt-4">Reload the page or restart your player at the beginning of each presentation or workshop to access the new stream.</p>
                     </div>
                 </div>
               </div><!-- /container-->
