--- a/en/index.html
+++ b/en/index.html
@@ -106,7 +106,7 @@
                        <p>For this year we are organizing an online event instead. Presentations and workshops will be streamed online,
                          on May 27th to 29th.</p>
                        <p>Please check the <a href="program.html" class="btn btn-cor4 btn-lg"> program</a> and read
-                         <a href="/live.html" class="btn btn-cor4 btn-lg">how to join the event</a>.</p>      
+                         <a href="live.html" class="btn btn-cor4 btn-lg">how to join the event</a>.</p>      
                     </div>
                     <div class="col-md-4">
                         <p class="text-center"><img src="../css/img/icone01.png" width="130" alt=""></p>
